Organised directory structure

--- a/resource/html/popup.html
+++ b/resource/html/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en_us">
+<html lang="en_gb">
 
 <head>
 
     <title>Hide Karma</title>
-    <link rel="icon" href="/icon/icon32.png">
-    <link rel="stylesheet" href="popup.css">
+    <link rel="icon" href="/resource/image/icon/icon32.png">
+    <link rel="stylesheet" href="/resource/css/popup.css">
 
 </head>
 
@@ -15,7 +15,7 @@
 
         <h1>Hide Reddit Karma</h1>
         <p>Removes the karma displays from reddit.</p>
-        <code>Version: v1.0.0</code>
+        <code>Version: v1.1.0</code>
 
     </div>
 
