--- a/resource/html/popup.html
+++ b/resource/html/popup.html
@@ -13,9 +13,11 @@
 
     <div class="container" id="main">
 
-        <h1>Hide Reddit Karma</h1>
-        <p>Removes the karma displays from reddit.</p>
-        <code>Version: v1.1.0</code>
+        <h1 id="heading">Hide Reddit Karma</h1>
+        <p id="subheading">Removes the karma displays from reddit.</p>
+        <code id="footer">Version: v1.1.0 &#x2022;
+            <a id="github-link" href="https://github.com/rhystedstone/hidekarma"target="_blank_">GitHub</a>
+        </code>
 
     </div>
 
