--- a/resource/html/popup.html
+++ b/resource/html/popup.html
@@ -16,7 +16,8 @@
         <h1 id="heading">Hide Reddit Karma</h1>
         <p id="subheading">Removes the karma displays from reddit.</p>
         <code id="footer">Version: v1.1.0 &#x2022;
-            <a id="github-link" href="https://github.com/rhystedstone/hidekarma"target="_blank_">GitHub</a>
+            <a id="github-link" href="https://github.com/rhystedstone/hidekarma"target="_blank_">GitHub</a> &#x2022;
+            <a id="github-link" href="https://github.com/rhystedstone/hidekarma/issues" target="_blank_">Issues</a>
         </code>
 
     </div>
